force-app/main/default/objects/StudentTest__c/StudentTest__c.object-meta.xml
<CustomObject>
    <label>StudentTest</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>