force-app/main/default/objects/StudentTest__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Enter your mail id</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>