force-app/main/default/objects/StudentTest__c/fields/Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Roll_No__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Roll_No</label>
    <type>AutoNumber</type>
</CustomField>