force-app/main/default/objects/StudentTest__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <length>20</length>
    <type>Text</type>
</CustomField>