force-app/main/default/objects/StudentTest__c/recordTypes/d1.recordType-meta.xml
<RecordType>
    <fullName>d1</fullName>
    <active>true</active>
    <label>d1</label>
</RecordType>