force-app/main/default/objects/StudentTest__c/recordTypes/demo.recordType-meta.xml
<RecordType>
    <fullName>demo</fullName>
    <active>true</active>
    <label>demo</label>
</RecordType>